<resources>
    <string name="app_name">WhereMoney</string>
    <string name="simplesplashscreen">SimpleSplashScreen</string>
    <string name="theName">ГдеДеньги</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Сегодня</string>
    <string name="menu_gallery">Мои долги</string>
    <string name="menu_slideshow">Кто-то должен мне</string>
    <string name="some_picture">some_picture</string>
    <string name="exchange_rates">Курс валют (%s):\n1%s=%.2f%s\n1%s=%.2f%s</string>
    <string name="budget">Бюджет: %.2f</string>
    <string name="today">Сегодня</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_add_new_debt">AddNewDebtActivity</string>
    <string name="howLongLending">Вернуть до возможно никогда</string>
    <string name="save">Сохранить</string>
    <string name="edit_date_desc">editDate</string>
    <string name="i_must_str">Я должен: %.2f</string>
    <string name="owe_to_me_str">Мне должны: %.2f</string>
    <string name="yor_re_happy">У вас пока нет долгов.\nСчастливый вы человек!</string>
    <string name="sorry">Кажется что-то пошло не так,\nзайдите позже</string>
    <string name="internet_problem">Кажется интернета нет</string>
</resources>
