<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.AddNewDebtActivity"
    tools:showIn="@layout/activity_add_new_debt">


    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:switchPadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEditText1"
            android:hint="@string/loading" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="380dp"
        android:text="@string/howLongLending"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="107dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:entries='@array/currencies_list'
        android:minWidth="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorLikeGreenBut4CAF50"
        android:textColor="@color/white"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:srcCompat="@drawable/edit_date"
        android:contentDescription="@string/edit_date_desc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/loading"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/switch1" />

</androidx.constraintlayout.widget.ConstraintLayout>